Fix two scrollbars

--- a/public/css/sidebar_admin.css
+++ b/public/css/sidebar_admin.css
@@ -8,9 +8,12 @@
     margin-left:0;
     margin-right:0;
 }
-#sidebar-container {
-    max-height: 100vh;   
+#sidebar-container {  
     background-color: #333;
     padding: 0;
+}
+
+.scrollbar_of {
+    max-height: 100vh; 
     overflow-y: auto;
 }
